# NotTerraria

./: CMakeLists.txt
.github/workflows/: build-and-deploy.yml
src/: game.cpp  game.hpp  main.cpp
